# pyroll-marini-spreading

./: .gitmodules  LICENSE  README.md  hatch.toml  pyproject.toml
docs/: PyRollDocs.cls  docs.tex  refs.bib
pyroll/: marini_spreading.py
pyroll/marini_spreading/: __init__.py  hookimpls.py  rollpass_hookimpls.py  rollpass_hookspecs.py
pyroll_marini_spreading/: __init__.py  hookimpls.py  hookspecs.py
tests/: config.yaml  input_imf_continuous_rolling_plant.py  test_solve.py  test_solve3.py
