[tool.poetry]
name = "pyroll-marini-spreading"
version = "1.0.0"
description = "Plugin for PyRoll providing the Marini spreading model."
authors = [
    "Christoph Renzing <christoph.renzing@imf.tu-freiberg.de>",
]

license = "BSD-3-Clause"
homepage = "https://pyroll-project.github.io/"
repository = "https://github.com/pyroll-project/pyroll-marini-spreading"
documentation = "https://github.com/pyroll-project/pyroll-marini-spreading/blob/main/docs/docs.pdf"
packages = [
    { include = "pyroll/marini_spreading" }
]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
pyroll = "1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
pyroll = { git = "https://github.com/pyroll-project/pyroll-core", branch = "main", develop = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
